# examora

./: .env.example  .env.prod  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-website.yml  rust.yml
.tech/: 01-foundation.md  02-auth-and-access.md  03-next-development-plan.md  03-subject-question-bank.md  04-paper-and-exam-publishing.md  05-candidate-exam-flow.md  06-programming-judge.md  07-audit-and-operations.md  README.md
apps/admin/: README.md  jest.config.ts  package.json  pnpm-lock.yaml
apps/admin-web/: index.html  package.json
apps/desktop/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/exam-desktop/: package.json
cmd/api/: main.go
cmd/dev-seed/: main.go
cmd/sandbox/: main.go
cmd/worker/: main.go
deploy/: Dockerfile.api  Dockerfile.sandbox  Dockerfile.worker  docker-compose.yml
docs/: api.md  architecture.md  database.md  sandbox.md  schema.sql
internal/api/: auth.go  batch.go  exam.go  exam_test.go  judge.go  library.go  library_test.go  request.go  response.go  routes_test.go  server.go  types.go  user_group.go  users.go
internal/auth/: ports.go  service.go  service_test.go  user.go
internal/bootstrap/: app.go
internal/exam/: batch.go  client_event.go  (+9 more)
migrations/: 001_init.sql  002_snapshot_tables.sql  003_user_groups.sql
website/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts  tsconfig.json
(+216 files in other folders)
